--- a/y-style.css
+++ b/y-style.css
@@ -1,11 +1,11 @@
 header{
-  background-color:#dfe6e9;
+  /*background-color:#dfe6e9;*/
   height: 50px;
   display:grid;
   grid-template-columns:.4fr 1fr 3fr 1fr;
 }
 .menu{
-  background-color:#55efc4;
+  /*background-color:#55efc4;*/
   display: flex;
   align-items: center;
   justify-content: center;
@@ -13,11 +13,18 @@ header{
 .menu > img{
   width: 20px;
 }
-.logo{
+.logo > img{
+  width: 50px;
   
 }
 .search{
-  background-color:#55efc4;
+ /* background-color:#55efc4;*/
+  display: flex;
+  align-items: center;
+}
+.search > input{
+  width: 500px;
+  outline-color: #3498db;
 }
 .main-container{
   height:680px;
@@ -40,4 +47,13 @@ header{
 }
 .video-tile{
   background-color:grey;
+}
+.right-icons > img{
+  width: 20px;
+  margin-right: 20px;
+}
+.right-icons{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
