Media query update
update

--- a/mediaq.css
+++ b/mediaq.css
@@ -15,4 +15,10 @@
     .logo img{
         min-width: 80px;
     }
+    .social{
+        display: none;
+    }
+    .logo{
+        justify-content: center;
+    }
 }
